---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : set of real"
---
"_"@(FileId(1), 5..6) [Type]: set[DefId(PackageId(0), LocalDefId(1))] of real
"_"@(FileId(1), 9..20) [Set]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 16..20): mismatched types
| error for (FileId(1), 16..20): `real` is not an index type
| info: an index type is an integer, a `boolean`, a `char`, an enumerated type, or a range
